--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/free-regular-svg-icons": "^6.4.2",
+		"bootstrap": "^5.3.2",
+		"font-awesome": "^4.7.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
